WIP Cleaned up structure got graphql imports working and directive resolvers. Still need to implement directives.

--- a/server/.babelrc
+++ b/server/.babelrc
@@ -8,7 +8,8 @@
       "alias": {
         "@root": ".",
         "@config": "./src/config",
-        "@modules": "./src/modules",
+        "@graphql": "./src/graphql",
+        "@modules": "./src/graphql/modules",
         "@services": "./src/services"
       }
     }]
