--- a/server/.graphqlconfig.yml
+++ b/server/.graphqlconfig.yml
@@ -1,10 +1,10 @@
 projects:
   app:
-    schemaPath: src/schema.graphql
+    schemaPath: src/graphql/schema.graphql
     extensions:
       endpoints:
         default: http://localhost:4000
   prisma:
-    schemaPath: src/generated/prisma.graphql
+    schemaPath: src/graphql/generated/prisma.graphql
     extensions:
       prisma: prisma/prisma.yml
