--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^3.0.1",
     "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
+    "graphql-import": "^0.7.1",
     "graphql-redis-subscriptions": "^1.5.0",
     "graphql-tools": "^3.1.1",
     "joi": "^13.6.0",
