Updated sample env

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,22 +1,18 @@
-PORT=4000
+PORT="4000"
 APP_URL=http://localhost:8080
+PRISMA_URL=""
+PRISMA_SECRET=""
 
-MONGODB_URI=secret
+AUTH_SECRET=""
+TOKEN_EXPIRES_IN="3d"
 
-AUTH_SECRET=secret
-TOKEN_EXPIRES_IN=3d
+APOLLO_ENGINE_API_KEY=
 
-APOLLO_ENGINE_API_KEY=secret
+MAILGUN_API_KEY=""
+MAILGUN_DOMAIN=""
+MAILGUN_SENDER=""
 
-REDIS_DOMAIN_NAME=secret
-REDIS_PORT_NUMBER=secret
-REDIS_PASSWORD=secret
+COMPANY_NAME=
+PRODUCT_NAME=
 
-MAILGUN_API_KEY=secret
-MAILGUN_DOMAIN=secret
-MAILGUN_SENDER=secret
-
-COMPANY_NAME=secret
-PRODUCT_NAME=secret
-
-PASSWORD_REGEX=secret
+PASSWORD_REGEX=
