--- a/server/.graphqlconfig.yml
+++ b/server/.graphqlconfig.yml
@@ -1,6 +1,6 @@
 projects:
   app:
-    schemaPath: src/graphql/schema.graphql
+    schemaPath: src/graphql/schema/schema.graphql
     extensions:
       endpoints:
         default: http://localhost:4000
