--- a/server/.graphqlconfig.yml
+++ b/server/.graphqlconfig.yml
@@ -3,7 +3,7 @@ projects:
     schemaPath: src/graphql/schema/schema.graphql
     extensions:
       endpoints:
-        default: http://localhost:4000
+        default: http://localhost:4000/graphql
   prisma:
     schemaPath: src/graphql/generated/prisma.graphql
     extensions:
