--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,12 @@
     "graphql-tag": "^2.9.2",
     "jsonwebtoken": "^8.3.0",
     "subscriptions-transport-ws": "^0.9.14",
-    "vue-apollo": "^3.0.0-beta.25",
     "vue-i18n": "^7.3.3",
     "vuelidate": "^0.7.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "dotenv": "^6.0.0",
     "eslint": "^4.18.2",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.1",
