--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,10 @@
   "dependencies": {
     "apollo-server": "^2.0.5",
     "bcrypt": "^3.0.1",
+    "cron": "^1.4.1",
     "dotenv": "^6.0.0",
     "graphql": "^0.13.2",
     "graphql-import": "^0.7.1",
-    "graphql-redis-subscriptions": "^1.5.0",
     "graphql-tools": "^3.1.1",
     "joi": "^13.6.0",
     "jsonwebtoken": "^8.3.0",
